# gst-msdk

./: .gitignore  AUTHORS  NEWS  configure.ac
src/: Makefile.am
